--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
                 <!-- Project 1 -->
                 <div class="card container-sm">
                     <div class="project-card-img">
-                        <img src="images/p3.jpeg" alt="p1">
+                        <img src="images/hsv.jpeg" alt="p1">
                     </div>
                     <div class="project-card-header">
                         <h4 class="project-heading text-lg">
