--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,7 @@
                 <!-- Project 4 -->
                 <div class="card container-sm">
                     <div class="projects-card-img">
-                        <img src="images/p3.jpeg" alt="p1">
+                        <img src="images/blueprint.jpg" alt="p1">
                     </div>
                     <div class="project-card-header">
                         <h4 class="project-heading text-lg">
