--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
                 <!-- Project 1 -->
                 <div class="card container-sm">
                     <div class="project-card-img">
-                        <img src="images/hsv.jpeg" alt="p1">
+                        <img src="images/hsv.jpeg" alt="website">
                     </div>
                     <div class="project-card-header">
                         <h4 class="project-heading text-lg">
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <!-- Project 2 -->
-                <!-- <div class="card container-sm">
+                <div class="card container-sm">
                     <div class="projects-card-img">
                         <img src="images/p3.jpeg" alt="p1">
                     </div>
@@ -180,11 +180,11 @@
                     <div class="project-card-body">
                         <a href="#" class="btn btn-primary">View Project</a>
                     </div>
-                </div> -->
+                </div>
                 <!-- Project 3 -->
                 <div class="card container-sm">
                     <div class="projects-card-img">
-                        <img src="images/blueprint.jpg" alt="p1">
+                        <img src="images/blueprint.jpg" alt="blueprint">
                     </div>
                     <div class="project-card-header">
                         <h4 class="project-heading text-lg">
@@ -201,7 +201,7 @@
                 <!-- Project 4 -->
                 <div class="card container-sm">
                     <div class="projects-card-img">
-                        <img src="images/blueprint.jpg" alt="p1">
+                        <img src="images/hsv.jpeg" alt="hsv">
                     </div>
                     <div class="project-card-header">
                         <h4 class="project-heading text-lg">
