--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
                 <!-- Project 2 -->
                 <div class="card container-sm">
                     <div class="projects-card-img">
-                        <img src="images/p3.jpeg" alt="p1">
+                        <img src="images/p3.jpeg" alt="digihealth">
                     </div>
                     <div class="project-card-header">
                         <h4 class="project-heading text-lg">
