--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <!-- Project 1 -->
                 <div class="card container-sm">
                     <div class="project-card-img">
-                        <img src="images/hsv.jpeg" alt="website">
+                        <img src="website/images/blueprint.jpg" alt="website">
                     </div>
                     <div class="project-card-header">
                         <h4 class="project-heading text-lg">
@@ -167,7 +167,7 @@
                 <!-- Project 2 -->
                 <div class="card container-sm">
                     <div class="projects-card-img">
-                        <img src="images/p3.jpeg" alt="digihealth">
+                        <img src="images/blueprint.jpg" alt="digihealth">
                     </div>
                     <div class="project-card-header">
                         <h4 class="project-heading text-lg">
