new project layout

--- a/index.html
+++ b/index.html
@@ -148,89 +148,99 @@
             </div>
             <div class="projects-grid">
                 <!-- Project 1 -->
-                <div class="card container-sm">
+                <div class="card">
+                    <div class="projects-in-grid">
                     <div class="project-card-img">
                         <img src="website/images/blueprint.jpg" alt="website">
                     </div>
-                    <div class="project-card-header">
-                        <h4 class="project-heading text-lg">
+                    <div class="project-card-content">
+                        <h4 class="project-card-heading text-lg">
                             This Website!
                         </h4>
-                        <p class="projects-card-subheading">
+                        <p class="project-card-subheading">
                             My portfolio website built using HTML, CSS, and JavaScript. Improvements are being made throughout the summer!
                         </p>
+                        <div class="project-card-body">
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
                     </div>
-                    <div class="project-card-body">
-                        <a href="#" class="btn btn-primary">View Project</a>
-                    </div>
+                </div>
                 </div>
                 <!-- Project 2 -->
-                <div class="card container-sm">
-                    <div class="projects-card-img">
+                <div class="card">
+                    <div class="projects-in-grid">
+                    <div class="project-card-img">
                         <img src="images/blueprint.jpg" alt="digihealth">
                     </div>
-                    <div class="project-card-header">
-                        <h4 class="project-heading text-lg">
+                    <div class="project-card-content">
+                        <h4 class="project-card-heading text-lg">
                             DigiHealth
                         </h4>
-                        <p class="projects-card-subheading">
+                        <p class="project-card-subheading">
                             DigiHealth is a digital health journal created to help university students monitor their mental and physical well-being. This project was built in Java, with the GUI created using Swing.
                         </p>
-                    </div>
-                    <div class="project-card-body">
-                        <a href="#" class="btn btn-primary">View Project</a>
+                        <div class="project-card-body">
+                            <a href="#" class="btn btn-primary">View Project</a>
+                        </div>
                     </div>
                 </div>
+                </div>
                 <!-- Project 3 -->
-                <div class="card container-sm">
-                    <div class="projects-card-img">
+                <div class="card">
+                    <div class="projects-in-grid">
+                    <div class="project-card-img">
                         <img src="images/blueprint.jpg" alt="blueprint">
                     </div>
-                    <div class="project-card-header">
+                    <div class="project-card-heading">
                         <h4 class="project-heading text-lg">
                             Blueprint 2024
                         </h4>
-                        <p class="projects-card-subheading">
+                        <p class="project-card-subheading">
                             I connected over 200 students and 60 professionals in the tech industry by directing UBC's largest technology conference, Blueprint. With Google as its headline sponsor, the conference featured 1 panel discussion, 4 workshops, 12 boothing partners, & various live demos of different emerging technologies.
                         </p>
-                    </div>
-                    <div class="project-card-body">
-                        <a href="https://www.ubcbiztech.com/blueprint-2024" class="btn btn-primary">View Project</a>
+                        <div class="project-card-body">
+                            <a href="https://www.ubcbiztech.com/blueprint-2024" class="btn btn-primary">View Project</a>
+                        </div>
                     </div>
                 </div>
+                </div>
                 <!-- Project 4 -->
-                <div class="card container-sm">
-                    <div class="projects-card-img">
+                <div class="card">
+                    <div class="projects-in-grid">
+                    <div class="project-card-img">
                         <img src="images/hsv.jpeg" alt="hsv">
                     </div>
-                    <div class="project-card-header">
+                    <div class="project-card-heading">
                         <h4 class="project-heading text-lg">
                             Hey Stranger Vancouver
                         </h4>
-                        <p class="projects-card-subheading">
+                        <p class="project-card-subheading">
                             My best friend and I co-founded a photo blog highlighting the diverse stories of 50+ people across Vancouver. This project was created to promote empathy & encourage people to learn about experiences that they would otherwise be removed from.
                         </p>
-                    </div>
-                    <div class="project-card-body">
-                        <a href="https://www.heystrangervancouver.com/" class="btn btn-primary">View Project</a>
+                        <div class="project-card-body">
+                            <a href="https://www.heystrangervancouver.com/" class="btn btn-primary">View Project</a>
+                        </div>
                     </div>
                 </div>
+                </div>
                 <!-- Project 5 -->
-                <div class="card container-sm">
+                <div class="card">
+                    <div class="projects-in-grid">
                     <div class="project-card-img">
                         <!-- <img src="images/comingsoon.png" alt="p1"> -->
                     </div>
-                    <div class="project-card-header">
+                    <div class="project-card-heading">
                         <h4 class="project-heading text-lg">
                             Graphic Design
                         </h4>
-                        <p class="projects-card-subheading">
+                        <p class="project-card-subheading">
                             Take a look at my Behance account, which showcases designs I've made using Adobe InDesign, Adobe Illustrator, and Figma.
                         </p>
+                        <div class="project-card-body">
+                            <a href="#" class="btn btn-primary">Coming Soon</a>
+                        </div>
                     </div>
-                    <div class="project-card-body">
-                        <a href="#" class="btn btn-primary">Coming Soon</a>
-                    </div>
+                </div>
                 </div>
             </div>
         </div>
