--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             DigiHealth is a digital health journal created to help university students monitor their mental and physical well-being. This project was built in Java, with the GUI created using Swing.
                         </p>
                         <div class="project-card-body">
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="https://github.com/HannahAzad/digihealth" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -219,25 +219,6 @@
                         </p>
                         <div class="project-card-body">
                             <a href="https://www.heystrangervancouver.com/" class="btn btn-primary">View Project</a>
-                        </div>
-                    </div>
-                </div>
-                </div>
-                <!-- Project 5 -->
-                <div class="card">
-                    <div class="projects-in-grid">
-                    <div class="project-card-img">
-                        <!-- <img src="images/comingsoon.png" alt="p1"> -->
-                    </div>
-                    <div class="project-card-heading">
-                        <h4 class="project-heading text-lg">
-                            Graphic Design
-                        </h4>
-                        <p class="project-card-subheading">
-                            Take a look at my Behance account, which showcases designs I've made using Adobe InDesign, Adobe Illustrator, and Figma.
-                        </p>
-                        <div class="project-card-body">
-                            <a href="#" class="btn btn-primary">Coming Soon</a>
                         </div>
                     </div>
                 </div>
