--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             My portfolio website built using HTML, CSS, and JavaScript. Improvements are being made throughout the summer!
                         </p>
                         <div class="project-card-body">
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="https://github.com/HannahAzad/portfolio-website" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
                 </div>
