--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="card">
                     <div class="projects-in-grid">
                     <div class="project-card-img">
-                        <img src="images/blueprint.jpg" alt="digihealth">
+                        <img src="images/digihealth.png" alt="digihealth">
                     </div>
                     <div class="project-card-content">
                         <h4 class="project-card-heading text-lg">
