--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     Hannah Azad Manjiri
                 </h1>
                 <p class="hero-text text-md">
-                    3rd Year Business + Computer Science Student at UBC
+                    3rd Year Computer Science + Business Student at UBC
                 </p>
                 <div class="hero-buttons">
                     <a href="https://www.linkedin.com/in/hannah-azad-manjiri-40b6a51b9/" class="btn btn-primary">LinkedIn</a>
@@ -131,7 +131,7 @@
                 Hello!
             </h2>
             <div class="about-content text-sm text-center">
-                I'm a third-year student pursuing a double major in business & computer science at the University of British Columbia. I have strong interests in product design, data analysis, and business development, and am constantly searching for opportunities to grow my skills in these areas! If you want to know more about what I've been up to, feel free to take a look at my projects below or contact me for my resume.
+                I'm a third-year student pursuing a double major in computer science & business at the University of British Columbia. I have strong interests in product design, data analysis, and software development, and am constantly searching for opportunities to grow my skills in these areas! If you want to know more about what I've been up to, feel free to take a look at my projects below or contact me for my resume.
             </div>
         </div>
     </section>
