--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="card">
                     <div class="projects-in-grid">
                     <div class="project-card-img">
-                        <img src="website/images/blueprint.jpg" alt="website">
+                        <img src="images/website.png" alt="website">
                     </div>
                     <div class="project-card-content">
                         <h4 class="project-card-heading text-lg">
