--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="logo">
                 <a href="index.html">
                     <!-- <img src="images/logo.png" alt="logo"> -->
-                    H.A.M.
+                    Hannah Azad M.
                 </a>
             </div>
 
