--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <!-- <img src="images/logo.png" alt="logo"> -->
+                    <img src="images/logo.png" alt="logo">
                     Hannah Azad M.
                 </a>
             </div>
