--- a/index.html
+++ b/index.html
@@ -159,8 +159,11 @@
                         <h4 class="project-card-heading text-lg">
                             This Website!
                         </h4>
+                        <p class="project-card-skills">
+                            HTML  |  CSS  |  JavaScript
+                        </p>
                         <p class="project-card-subheading">
-                            My portfolio website built using HTML, CSS, and JavaScript. Improvements are being made throughout the summer!
+                            My portfolio website! Improvements are being made throughout the summer :)
                         </p>
                         <div class="project-card-body">
                             <a href="https://github.com/HannahAzad/portfolio-website" class="btn btn-primary">View Project</a>
@@ -178,8 +181,11 @@
                         <h4 class="project-card-heading text-lg">
                             DigiHealth
                         </h4>
+                        <p class="project-card-skills">
+                            Java  |  Swing Library
+                        </p>
                         <p class="project-card-subheading">
-                            DigiHealth is a digital health journal created to help university students monitor their mental and physical well-being. This project was built in Java, with the GUI created using Swing.
+                            DigiHealth is a digital health journal created to help university students monitor their mental and physical well-being.
                         </p>
                         <div class="project-card-body">
                             <a href="https://github.com/HannahAzad/digihealth" class="btn btn-primary">View Project</a>
@@ -197,6 +203,9 @@
                         <h4 class="project-heading text-lg">
                             Blueprint 2024
                         </h4>
+                        <p class="project-card-skills">
+                            Project Management  |  Cross-Functional Teamwork | Leadership
+                        </p>
                         <p class="project-card-subheading">
                             I connected over 200 students and 60 professionals in the tech industry by directing UBC's largest technology conference, Blueprint. With Google as its headline sponsor, the conference featured 1 panel discussion, 4 workshops, 12 boothing partners, & various live demos of different emerging technologies.
                         </p>
@@ -216,6 +225,9 @@
                         <h4 class="project-heading text-lg">
                             Hey Stranger Vancouver
                         </h4>
+                        <p class="project-card-skills">
+                            Digital Marketing | Communication
+                        </p>
                         <p class="project-card-subheading">
                             My best friend and I co-founded a photo blog highlighting the diverse stories of 50+ people across Vancouver. This project was created to promote empathy & encourage people to learn about experiences that they would otherwise be removed from.
                         </p>
