--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 My Projects
             </h3>
             <div class="projects-subheading text-md text-center">
-                A blend of dev work, graphic design, and more...
+                A blend of web development, project management, and more...
             </div>
             <div class="projects-grid">
                 <!-- Project 1 -->
