--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                             This Website!
                         </h4>
                         <p class="project-card-skills">
-                            HTML  |  CSS  |  JavaScript
+                            HTML  |  CSS  |  JavaScript  | Git
                         </p>
                         <p class="project-card-subheading">
                             My portfolio website! Improvements are being made throughout the summer :)
@@ -182,7 +182,7 @@
                             DigiHealth
                         </h4>
                         <p class="project-card-skills">
-                            Java  |  Swing Library
+                            Java  |  JSON  |  GitHub
                         </p>
                         <p class="project-card-subheading">
                             DigiHealth is a digital health journal created to help university students monitor their mental and physical well-being.
@@ -226,7 +226,7 @@
                             Hey Stranger Vancouver
                         </h4>
                         <p class="project-card-skills">
-                            Digital Marketing | Communication
+                            Digital Marketing | Verbal & Written Communication
                         </p>
                         <p class="project-card-subheading">
                             My best friend and I co-founded a photo blog highlighting the diverse stories of 50+ people across Vancouver. This project was created to promote empathy & encourage people to learn about experiences that they would otherwise be removed from.
